@@ -475,7 +475,9 @@ namespace std {
 %feature("flatnested") spot::acc_cond::acc_code;
 %feature("flatnested") spot::acc_cond::rs_pair;
 %apply bool* OUTPUT {bool& max, bool& odd};
-%template(vector_rs_pair) std::vector<spot::acc_cond::rs_pair>;
+namespace std {
+  %template(vector_rs_pair) vector<spot::acc_cond::rs_pair>;
+}
 %apply std::vector<spot::acc_cond::rs_pair> &OUTPUT {std::vector<spot::acc_cond::rs_pair>& pairs}
 %include <spot/twa/acc.hh>
 %template(pair_bool_mark) std::pair<bool, spot::acc_cond::mark_t>;
